fix text alignment on card title

--- a/src/components/card/card.css
+++ b/src/components/card/card.css
@@ -62,6 +62,7 @@
 @media (max-width: 767px) {
     .custom-card-title {
         font-size: 20px;
+        text-align: left !important;
     }
 
     .image-container {
@@ -73,6 +74,28 @@
         line-height: normal;
     }
 
+    .custom-card-header {
+        
+        gap: .8rem;
+        
+    }
+
 
   }
+
+  @media (min-width: 768px) and (max-width: 1024px) {
   
+    .custom-card-title {
+        font-size: 20px;
+    }
+
+    .image-container {
+        width: 60px;
+        height: 60px;
+    }
+    
+    .card-paragraph {
+        line-height: normal;
+    }
+    
+  }
